<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/mainMenu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/mainMenu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/mainMenu_users"
        android:icon="@drawable/ic_users"
        android:title="@string/users"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/mainMenu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>

</menu>