<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editTaskFragment_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Controller.EditTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTaskFragment_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textColorHint="@color/task_app_white"
            app:boxStrokeColor="@color/task_app_red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTaskFragment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine"
                android:textColor="@color/task_app_white"
                android:textSize="14dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTaskFragment_textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            android:textColorHint="@color/task_app_white"
            app:boxStrokeColor="@color/task_app_red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTaskFragment_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine"
                android:textColor="@color/task_app_white"
                android:textSize="14dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editTaskFragment_dateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/task_app_white"
            android:textColor="@color/task_app_dark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editTaskFragment_timeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/task_app_white"
            android:textColor="@color/task_app_dark" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/edtiFragment_radioBtn_todo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="0.3"
                android:buttonTint="@color/task_app_yellow"
                android:checked="true"
                android:enabled="true"
                android:text="@string/to_do"
                android:textColor="@color/task_app_white"
                android:textSize="10dp" />

            <RadioButton
                android:id="@+id/edtiFragment_radioBtn_doing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="0.3"
                android:buttonTint="@color/task_app_yellow"
                android:checked="true"
                android:enabled="true"
                android:text="@string/doing"
                android:textColor="@color/task_app_white"
                android:textSize="10dp" />

            <RadioButton
                android:id="@+id/edtiFragment_radioBtn_done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="0.3"
                android:buttonTint="@color/task_app_yellow"
                android:enabled="true"
                android:text="@string/done"
                android:textColor="@color/task_app_white"
                android:textSize="10dp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editTaskFragment_cancel"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:layout_weight="0.33"
                android:backgroundTint="@color/task_app_white"
                android:text="@android:string/cancel"
                android:textColor="@color/task_app_dark"
                android:textSize="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editTaskFragment_delete"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.33"
                android:backgroundTint="@color/task_app_white"
                android:text="@string/delete"
                android:textColor="@color/task_app_dark"
                android:textSize="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editTaskFragment_edit"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.33"
                android:backgroundTint="@color/task_app_white"
                android:text="@string/edit"
                android:textColor="@color/task_app_dark"
                android:textSize="10dp" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>

